Fixing deprecated constructors.