@@ -238,7 +238,7 @@ class CSharpParserFile {
         if (pattern.isSynthetic()) {
             constant = "SUBPRODUCTION_" + constantId;
             enm.addConstant(constant, String.valueOf(constantId + 3000));
-            constantNames.put(new Integer(pattern.getId()), constant);
+            constantNames.put(Integer.valueOf(pattern.getId()), constant);
             constantId++;
         }
     }
@@ -261,7 +261,7 @@ class CSharpParserFile {
         code.append(",\n");
         code.append("                                \"");
         if (pattern.isSynthetic()) {
-            str = (String) constantNames.get(new Integer(pattern.getId()));
+            str = (String) constantNames.get(Integer.valueOf(pattern.getId()));
             code.append(gen.getCodeStyle().getMixedCase(str, true));
         } else {
             code.append(pattern.getName());
@@ -333,7 +333,7 @@ class CSharpParserFile {
      * @return the constant name to use
      */
     private String getConstant(CSharpConstantsFile constants, int id) {
-        Integer  value = new Integer(id);
+        Integer  value = Integer.valueOf(id);
 
         if (constantNames.containsKey(value)) {
             return "SynteticPatterns." + constantNames.get(value);
